<resources>
    <string name="app_name">Calculator</string>
    <string name="default_result">0</string>
    <string name="btn_clear">C</string>
    <string name="btn_divide">/</string>
    <string name="btn_multiply">*</string>
    <string name="btn_back">⌫</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_minus">-</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_plus">+</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_equals">=</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_percent">%</string>
    <string name="btn_bracket">()</string>
</resources>