<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@color/black"
            android:text="@string/default_result"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:gravity="end|center_vertical"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:rowCount="5"
            android:columnCount="4"
            app:layout_constraintTop_toBottomOf ="@+id/tvResult"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btnClear"
                android:text="@string/btn_clear"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btnDivide"
                android:text="@string/btn_divide"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btnMultiply"
                android:text="@string/btn_multiply"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btnBack"
                android:text="@string/btn_back"
                style="@style/CalcButton"/>


            <Button
                android:id="@+id/btn7"
                android:text="@string/btn_7"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btn8"
                android:text="@string/btn_8"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btn9"
                android:text="@string/btn_9"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btnMinus"
                android:text="@string/btn_minus"
                style="@style/CalcButton"/>

            <Button
                android:id="@+id/btn4"
                android:text="@string/btn_4"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btn5"
                android:text="@string/btn_5"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btn6"
                android:text="@string/btn_6"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btnPlus"
                android:text="@string/btn_plus"
                style="@style/CalcButton"/>

            <Button
                android:id="@+id/btn1"
                android:text="@string/btn_1"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btn2"
                android:text="@string/btn_2"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btn3"
                android:text="@string/btn_3"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btnEquals"
                android:text="@string/btn_equals"
                style="@style/CalcButton"/>

            <Button
                android:id="@+id/btn0"
                android:text="@string/btn_0"
                style="@style/CalcButton"
                />
            <Button
                android:id="@+id/btnbracket"
                android:text="@string/btn_bracket"
                style="@style/CalcButton" />
            <Button
                android:id="@+id/btnDot"
                android:text="@string/btn_dot"
                style="@style/CalcButton"/>
            <Button
                android:id="@+id/btnPercent"
                android:text="@string/btn_percent"
                style="@style/CalcButton"/>

        </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>